Изменил расположение header и nav

--- a/index.html
+++ b/index.html
@@ -7,36 +7,38 @@
   </head>
 
   <body>
-    <header class="page-header"></header>
-    <img class="Logo" src="" alt="Логоип Седона">
-    <nav class="navigation"></nav>
-    <ul class="navigation-list">
-      <li class="navigation-item">
-        <a class="navigation-link" href="home.html">Главная</a>
-      </li>
-      <li class="navigation-item">
-        <a class="navigation-link" href="about.html">О Седоне</a>
-      </li>
-      <li class="navigation-item">
-        <a class="navigation-link" href="Hotels.html">Гастиницы</a>
-      </li>
-    </ul>
-    <ul class="navigation-list">
-      <li class="navigation-user">
-        <a class="navigation-link" href="#">
-          <span class="visually-hidden">Поиск
-          </span>
-        </a>
-      </li>
-      <li class="navigation-item">
-        <a class="navigation-link" href="#">
-          <span class="visually-hidden">Избраное</span>
-        </a>
-      </li>
-      <li class="navigation-item">
-        <a class="navigation-link" href="#">Хочу сюда</a>
-      </li>
-    </ul>
+    <header class="page-header">
+      <img class="Logo" src="" alt="Логоип Седона">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="home.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="Hotels.html">Гастиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list">
+          <li class="navigation-user">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Избраное</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Хочу сюда</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main class="main-index">
       <h1 class="visually-hidden">Седона</h1>
       <img class="Welcom" src="" alt="Добро пожаловать">
