Обернул img ссылкой

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header class="page-header">
-      <img class="Logo" src="" alt="Логоип Седона">
+      <a href="#"></a><img class="Logo" src="" alt="Логоип Седона"></a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
