Убрал заглавные буквы

--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
           </li>
         </ul>
       </section>
-      <section class="Interested">
-        <h2 class="Interested-title">Заинтересовались?</h2>
-        <p class="Interested-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
+      <section class="interested">
+        <h2 class="interested-title">Заинтересовались?</h2>
+        <p class="interested-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
           гостиниц в Седоне</p>
         <a class="button-button-hotel" href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
       </section>
-      <section class="Newsletter">
-        <h2 class="Newsletter-title">Подпишитесь на рассылку</h2>
-        <p class="Newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <section class="newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mail-address" action="https://echo.htmlacademy.ru/" method="post"></form>
         <p>
           <label for="appointment-date"></label>
