--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2 class="interested-title">Заинтересовались?</h2>
         <p class="interested-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
           гостиниц в Седоне</p>
-        <a class="button-button-hotel" href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+        <a class="button-button-hotel" href="#">поиск гостиницы в седоне</a>
       </section>
       <section class="newsletter">
         <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
