Добавил секцию в footer

--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
           гостиниц в Седоне</p>
         <a class="button-button-hotel" href="#">поиск гостиницы в седоне</a>
       </section>
-      <section class="newsletter">
-        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
-        <p class="newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+    </main>
+    <footer class="page-footer">
+      <section class="footer-newsletter">
+        <h2 class="footer-newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="footer-newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mail-address" action="https://echo.htmlacademy.ru/" method="post"></form>
         <p>
           <label for="appointment-date"></label>
@@ -108,9 +110,7 @@
           <button class="button" type="submit">подписаться</button>
         </p>
       </section>
-    </main>
-    <footer class="page-footer">
-      <section class=contacts>
+      <section class=footer-contacts>
         <h2 class="contacts"><span class="visually-hidden">Контакты</span></h2>
         <h3 class="visually-hidden">Соцсети</h3>
         <ul class="footer-social-list">
@@ -134,9 +134,9 @@
           </li>
         </ul>
       </section>
-      <section class="phone">
-        <h3 class="phone-title"> <span class="visually-hidden">Телефон</span> </h3>
-        <a class="phone-namber" href="tel:78128121212">+7 (812) 812-12-12</a>
+      <section class="footer-phone">
+        <h3 class="footer-phone-title"> <span class="visually-hidden">Телефон</span> </h3>
+        <a class="footer-phone-namber" href="tel:78128121212">+7 (812) 812-12-12</a>
       </section>
       <section class="footer-logo">
         <h3 class="footer-logo"><span class="visually-hidden">Логоип в подвале</span></h3>
