Оборачивает img ссылкой

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </section>
       <section class="footer-logo">
         <h3 class="footer-logo"><span class="visually-hidden">Логоип в подвале</span></h3>
-        <img class="footer-Logo-icon" src="" alt="Логоип в footer">
+        <a href="#"><img class="footer-Logo-icon" src="" alt="Логоип в footer"></a>
 
       </section>
     </footer>
