Убирает img в список

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header class="page-header">
-      <a href="#"></a><img class="Logo" src="" alt="Логоип Седона"></a>
+      <a href="#"><img class="Logo" src="" alt="Логоип Седона"></a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -52,8 +52,8 @@
           <li class="advantares-item">
             <h3 class="advantares-title">Настоящий городок</h3>
             <p class="adventares-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="village" src="" alt="Фото города">
           </li>
-          <img class="village" src="" alt="Фото города">
           <li class="advantares-item">
             <h3 class="advantares-title">Небольшая
               площадь</h3>
@@ -73,8 +73,10 @@
             <h3 class="advantares-title">Там есть
               мост дьявола</h3>
             <p class="adventares-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img class="canyon" src="" alt="Мост дьявола">
           </li>
-          <img class="canyon" src="" alt="Мост дьявола">
+        </ul>
+        <ul>
           <li class="advantares-item">
             <h3 class="advantares-title">Жильё</h3>
             <p class="adventares-description">Рекомендуем пожитьв настоящем мотеле,
