--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header class="page-header">
-      <a href="#"><img class="Logo" src="" alt="Логоип Седона"></a>
+      <a href="#"><img class="Logo" src="images/logo.svg" width="140" height="70" alt="Логоип Седона"></a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -26,11 +26,13 @@
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск
               </span>
+              <img class="navigation-serch" src="images/serch.svg" width="19" height="19" alt="иконка поиск">
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избраное</span>
+              <img class="navigation-serch" src="images/like.svg" width="18" height="17" alt="иконка избраное">
             </a>
           </li>
           <li class="navigation-item">
@@ -41,9 +43,8 @@
     </header>
     <main class="main-index">
       <h1 class="visually-hidden">Седона</h1>
-      <img class="Welcom" src="" alt="Добро пожаловать">
-      <img class="To the" src="" alt="Великолепное">
-      <img class="Sedona Becouse" src="" alt="Седона потому">
+      <img class="Welcom" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать">
+      <img class="village" src="images/hils.jpg" width="700" height="350" alt="Горы">
       <section class="advantages">
         <h2>Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h2>
@@ -51,43 +52,51 @@
         <ul class="advantares-list">
           <li class="advantares-item">
             <h3 class="advantares-title">Настоящий городок</h3>
+            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventares-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="village" src="" alt="Фото города">
+            <img class="village" src="images/City.jpg" width="700" height="350" alt="Фото города">
           </li>
           <li class="advantares-item">
             <h3 class="advantares-title">Небольшая
               площадь</h3>
+            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventares-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="advantares-item">
             <h3 class="advantares-title">Красивая
               дорога</h3>
+            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventares-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantares-item">
             <h3 class="advantares-title">Мало
               туристов</h3>
+            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventares-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantares-item">
             <h3 class="advantares-title">Там есть
               мост дьявола</h3>
+            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventares-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="canyon" src="" alt="Мост дьявола">
+            <img class="canyon" src="images/canyon.jpg" width="700" height="350" alt="Каньон">
           </li>
         </ul>
         <ul>
           <li class="advantares-item">
+            <img class="village" src="images/home.svg" width="76" height="72" alt="Дом">
             <h3 class="advantares-title">Жильё</h3>
             <p class="adventares-description">Рекомендуем пожитьв настоящем мотеле,
               всё как в кино!</p>
           </li>
           <li class="advantares-item">
+            <img class="village" src="images/burger.svg" width="75" height="70" alt="Бургер">
             <h3 class="advantares-title">Еда</h3>
             <p class="adventares-description">Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="advantares-item">
+            <img class="village" src="images/gift.svg" width="65" height="76" alt="подпрок">
             <h3 class="advantares-title">Сувениры</h3>
             <p class="adventares-description">Не только китайского,
               но и настоящего местного производства!</p>
@@ -106,6 +115,7 @@
         <h2 class="footer-newsletter-title">Подпишитесь на рассылку</h2>
         <p class="footer-newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="mail-address" action="https://echo.htmlacademy.ru/" method="post"></form>
+        <img class="canyon" src="images/canyon.jpg" width="700" height="350" alt="Каньон-приближен-размыт">
         <p>
           <label for="appointment-date"></label>
           <input type="text" id="appointment-date" name="appointment-date" placeholder="Ваш e-mail">
@@ -119,6 +129,7 @@
           <li class="social-item">
             <a class="button" href="#">
               <span class="visually-hiden">ВКонтакте
+                <a href="#"><img class="vk" src="images/VK.svg" width="25" height="15" alt="инонка-вк"></a>
               </span>
             </a>
           </li>
@@ -126,12 +137,14 @@
             <a class="button" href="#">
               <span class="visually-hiden">Телеграм
               </span>
+              <a href="#"></a><img class="tg" src="images/telegram.svg" width="18" height="16" alt="инонка-телеграм"></a>
             </a>
           </li>
           <li class="social-item">
             <a class="button" href="#">
               <span class="visually-hiden">YouTube
               </span>
+              <a href="#"></a><img class="yt" src="images/yotube.svg" width="23" height="18" alt="инонка-ютуб"></a>
             </a>
           </li>
         </ul>
@@ -142,7 +155,7 @@
       </section>
       <section class="footer-logo">
         <h3 class="footer-logo"><span class="visually-hidden">Логоип в подвале</span></h3>
-        <a href="#"><img class="footer-Logo-icon" src="" alt="Логоип в footer"></a>
+        <a href="#"><img class="footer-Logo-icon" src="images/html academy.svg" width="115" height="34" alt="Логоип в footer"></a>
 
       </section>
     </footer>
