--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
   <body>
     <header class="page-header">
-      <a href="#"><img class="Logo" src="images/logo.svg" width="140" height="70" alt="Логоип Седона"></a>
+      <a href="#"><img class="logo" src="images/logo.svg" width="140" height="70" alt="логотип Седона"></a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="home.html">Главная</a>
+            <a class="navigation-link" href="home.html">главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="Hotels.html">Гастиницы</a>
+            <a class="navigation-link" href="hotels.html">гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list">
@@ -26,13 +26,13 @@
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск
               </span>
-              <img class="navigation-serch" src="images/serch.svg" width="19" height="19" alt="иконка поиск">
+              <img class="navigation-search" src="images/search.svg" width="19" height="19" alt="иконка поиск">
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избраное</span>
-              <img class="navigation-serch" src="images/like.svg" width="18" height="17" alt="иконка избраное">
+              <span class="visually-hidden">избранное</span>
+              <img class="navigation-search" src="images/like.svg" width="18" height="17" alt="иконка избранное">
             </a>
           </li>
           <li class="navigation-item">
@@ -43,62 +43,62 @@
     </header>
     <main class="main-index">
       <h1 class="visually-hidden">Седона</h1>
-      <img class="Welcom" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать">
-      <img class="village" src="images/hils.jpg" width="700" height="350" alt="Горы">
-      <section class="advantages">
+      <img class="welcome" src="images/welcome.svg" width="458" height="352" alt="добро пожаловать">
+      <img class="village" src="images/hils.jpg" width="700" height="350" alt="горы">
+      <section class="adventures">
         <h2>Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h2>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ul class="advantares-list">
-          <li class="advantares-item">
-            <h3 class="advantares-title">Настоящий городок</h3>
+        <ul class="adventures-list">
+          <li class="adventures-item">
+            <h3 class="adventures-title">Настоящий городок</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventares-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <p class="adventures-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img class="village" src="images/City.jpg" width="700" height="350" alt="Фото города">
           </li>
-          <li class="advantares-item">
-            <h3 class="advantares-title">Небольшая
+          <li class="adventures-item">
+            <h3 class="adventures-title">Небольшая
               площадь</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventares-description">Все достопримечательности находятся очень близко</p>
+            <p class="adventures-description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantares-item">
-            <h3 class="advantares-title">Красивая
+          <li class="adventures-item">
+            <h3 class="adventures-title">Красивая
               дорога</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventares-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="adventures-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantares-item">
-            <h3 class="advantares-title">Мало
+          <li class="adventures-item">
+            <h3 class="adventures-title">Мало
               туристов</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventares-description">Большинство едет в Гранд Каньон и толпится там</p>
+            <p class="adventures-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantares-item">
-            <h3 class="advantares-title">Там есть
+          <li class="adventures-item">
+            <h3 class="adventures-title">Там есть
               мост дьявола</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventares-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <p class="adventures-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img class="canyon" src="images/canyon.jpg" width="700" height="350" alt="Каньон">
           </li>
         </ul>
         <ul>
-          <li class="advantares-item">
+          <li class="adventures-item">
             <img class="village" src="images/home.svg" width="76" height="72" alt="Дом">
-            <h3 class="advantares-title">Жильё</h3>
-            <p class="adventares-description">Рекомендуем пожитьв настоящем мотеле,
+            <h3 class="adventures-title">Жильё</h3>
+            <p class="adventures-description">Рекомендуем пожить в настоящем мотеле,
               всё как в кино!</p>
           </li>
-          <li class="advantares-item">
+          <li class="adventures-item">
             <img class="village" src="images/burger.svg" width="75" height="70" alt="Бургер">
-            <h3 class="advantares-title">Еда</h3>
-            <p class="adventares-description">Всегда заказывайте
+            <h3 class="adventures-title">Еда</h3>
+            <p class="adventures-description">Всегда заказывайте
               топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantares-item">
-            <img class="village" src="images/gift.svg" width="65" height="76" alt="подпрок">
-            <h3 class="advantares-title">Сувениры</h3>
-            <p class="adventares-description">Не только китайского,
+          <li class="adventures-item">
+            <img class="village" src="images/gift.svg" width="65" height="76" alt="подарок">
+            <h3 class="adventures-title">Сувениры</h3>
+            <p class="adventures-description">Не только китайского,
               но и настоящего местного производства!</p>
           </li>
         </ul>
@@ -128,34 +128,34 @@
         <ul class="footer-social-list">
           <li class="social-item">
             <a class="button" href="#">
-              <span class="visually-hiden">ВКонтакте
-                <a href="#"><img class="vk" src="images/VK.svg" width="25" height="15" alt="инонка-вк"></a>
+              <span class="visually-hidden">ВКонтакте
+                <a href="#"><img class="vk" src="images/VK.svg" width="25" height="15" alt="иконка-вк"></a>
               </span>
             </a>
           </li>
           <li class="social-item">
             <a class="button" href="#">
-              <span class="visually-hiden">Телеграм
+              <span class="visually-hidden">телеграмм
               </span>
-              <a href="#"></a><img class="tg" src="images/telegram.svg" width="18" height="16" alt="инонка-телеграм"></a>
+              <a href="#"></a><img class="tg" src="images/telegram.svg" width="18" height="16" alt="иконка-телеграмм"></a>
             </a>
           </li>
           <li class="social-item">
             <a class="button" href="#">
-              <span class="visually-hiden">YouTube
+              <span class="visually-hidden">youTube
               </span>
-              <a href="#"></a><img class="yt" src="images/yotube.svg" width="23" height="18" alt="инонка-ютуб"></a>
+              <a href="#"></a><img class="yt" src="images/youtube.svg" width="23" height="18" alt="иконка-ютуб"></a>
             </a>
           </li>
         </ul>
       </section>
       <section class="footer-phone">
         <h3 class="footer-phone-title"> <span class="visually-hidden">Телефон</span> </h3>
-        <a class="footer-phone-namber" href="tel:78128121212">+7 (812) 812-12-12</a>
+        <a class="footer-phone-number" href="tel:78128121212">+7 (812) 812-12-12</a>
       </section>
       <section class="footer-logo">
-        <h3 class="footer-logo"><span class="visually-hidden">Логоип в подвале</span></h3>
-        <a href="#"><img class="footer-Logo-icon" src="images/html academy.svg" width="115" height="34" alt="Логоип в footer"></a>
+        <h3 class="footer-logo"><span class="visually-hidden">Логотип в подвале</span></h3>
+        <a href="#"><img class="footer-Logo-icon" src="images/html academy.svg" width="115" height="34" alt="Логотип в footer"></a>
 
       </section>
     </footer>
