--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
   <body>
     <header class="page-header">
-      <a href="#"><img class="logo" src="images/logo.svg" width="140" height="70" alt="логотип Седона"></a>
+      <a href="#">
+        <img class="logo" src="images/logo.svg" width="140" height="70" alt="логотип Седона">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -24,8 +26,7 @@
         <ul class="navigation-list">
           <li class="navigation-user">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск
-              </span>
+              <span class="visually-hidden">Поиск</span>
               <img class="navigation-search" src="images/search.svg" width="19" height="19" alt="иконка поиск">
             </a>
           </li>
@@ -46,37 +47,32 @@
       <img class="welcome" src="images/welcome.svg" width="458" height="352" alt="добро пожаловать">
       <img class="village" src="images/hils.jpg" width="700" height="350" alt="горы">
       <section class="adventures">
-        <h2>Седона — небольшой городок в Аризоне,
-          заслуживающий большего!</h2>
+        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="adventures-list">
           <li class="adventures-item">
             <h3 class="adventures-title">Настоящий городок</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventures-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="village" src="images/City.jpg" width="700" height="350" alt="Фото города">
+            <img class="village" src="images/сity.jpg" width="700" height="350" alt="Фото города">
           </li>
           <li class="adventures-item">
-            <h3 class="adventures-title">Небольшая
-              площадь</h3>
+            <h3 class="adventures-title">Небольшая площадь</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventures-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="adventures-item">
-            <h3 class="adventures-title">Красивая
-              дорога</h3>
+            <h3 class="adventures-title">Красивая дорога</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventures-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="adventures-item">
-            <h3 class="adventures-title">Мало
-              туристов</h3>
+            <h3 class="adventures-title">Мало туристов</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventures-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="adventures-item">
-            <h3 class="adventures-title">Там есть
-              мост дьявола</h3>
+            <h3 class="adventures-title">Там есть мост дьявола</h3>
             <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
             <p class="adventures-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img class="canyon" src="images/canyon.jpg" width="700" height="350" alt="Каньон">
@@ -86,20 +82,17 @@
           <li class="adventures-item">
             <img class="village" src="images/home.svg" width="76" height="72" alt="Дом">
             <h3 class="adventures-title">Жильё</h3>
-            <p class="adventures-description">Рекомендуем пожить в настоящем мотеле,
-              всё как в кино!</p>
+            <p class="adventures-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="adventures-item">
             <img class="village" src="images/burger.svg" width="75" height="70" alt="Бургер">
             <h3 class="adventures-title">Еда</h3>
-            <p class="adventures-description">Всегда заказывайте
-              топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p class="adventures-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="adventures-item">
             <img class="village" src="images/gift.svg" width="65" height="76" alt="подарок">
             <h3 class="adventures-title">Сувениры</h3>
-            <p class="adventures-description">Не только китайского,
-              но и настоящего местного производства!</p>
+            <p class="adventures-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
@@ -128,23 +121,27 @@
         <ul class="footer-social-list">
           <li class="social-item">
             <a class="button" href="#">
-              <span class="visually-hidden">ВКонтакте
-                <a href="#"><img class="vk" src="images/VK.svg" width="25" height="15" alt="иконка-вк"></a>
-              </span>
+              <span class="visually-hidden">ВКонтакте</span>
+                <a href="#">
+                  <img class="vk" src="images/VK.svg" width="25" height="15" alt="иконка-вк">
+                </a>
             </a>
           </li>
           <li class="social-item">
             <a class="button" href="#">
               <span class="visually-hidden">телеграмм
               </span>
-              <a href="#"></a><img class="tg" src="images/telegram.svg" width="18" height="16" alt="иконка-телеграмм"></a>
-            </a>
+              <a href="#">
+                <img class="tg" src="images/telegram.svg" width="18" height="16" alt="иконка-телеграмм">
+              </a>
           </li>
           <li class="social-item">
             <a class="button" href="#">
               <span class="visually-hidden">youTube
               </span>
-              <a href="#"></a><img class="yt" src="images/youtube.svg" width="23" height="18" alt="иконка-ютуб"></a>
+              <a href="#">
+                <img class="yt" src="images/youtube.svg" width="23" height="18" alt="иконка-ютуб">
+              </a>
             </a>
           </li>
         </ul>
@@ -155,8 +152,9 @@
       </section>
       <section class="footer-logo">
         <h3 class="footer-logo"><span class="visually-hidden">Логотип в подвале</span></h3>
-        <a href="#"><img class="footer-Logo-icon" src="images/html academy.svg" width="115" height="34" alt="Логотип в footer"></a>
-
+        <a href="#">
+          <img class="footer-Logo-icon" src="images/htmlacademy.svg" width="115" height="34" alt="Логотип в footer">
+        </a>
       </section>
     </footer>
 
