--- a/index.html
+++ b/index.html
@@ -4,160 +4,164 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
-    <header class="page-header">
-      <a href="#">
-        <img class="logo" src="images/logo.svg" width="140" height="70" alt="логотип Седона">
-      </a>
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="home.html">главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="hotels.html">гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-list">
-          <li class="navigation-user">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
-              <img class="navigation-search" src="images/search.svg" width="19" height="19" alt="иконка поиск">
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">избранное</span>
-              <img class="navigation-search" src="images/like.svg" width="18" height="17" alt="иконка избранное">
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main-index">
-      <h1 class="visually-hidden">Седона</h1>
-      <img class="welcome" src="images/welcome.svg" width="458" height="352" alt="добро пожаловать">
-      <img class="village" src="images/hils.jpg" width="700" height="350" alt="горы">
-      <section class="adventures">
-        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ul class="adventures-list">
-          <li class="adventures-item">
-            <h3 class="adventures-title">Настоящий городок</h3>
-            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventures-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="village" src="images/сity.jpg" width="700" height="350" alt="Фото города">
-          </li>
-          <li class="adventures-item">
-            <h3 class="adventures-title">Небольшая площадь</h3>
-            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventures-description">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="adventures-item">
-            <h3 class="adventures-title">Красивая дорога</h3>
-            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventures-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="adventures-item">
-            <h3 class="adventures-title">Мало туристов</h3>
-            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventures-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="adventures-item">
-            <h3 class="adventures-title">Там есть мост дьявола</h3>
-            <img class="village" src="images/trait.svg" width="60" height="2" alt="Черта">
-            <p class="adventures-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="canyon" src="images/canyon.jpg" width="700" height="350" alt="Каньон">
-          </li>
-        </ul>
-        <ul>
-          <li class="adventures-item">
-            <img class="village" src="images/home.svg" width="76" height="72" alt="Дом">
-            <h3 class="adventures-title">Жильё</h3>
-            <p class="adventures-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="adventures-item">
-            <img class="village" src="images/burger.svg" width="75" height="70" alt="Бургер">
-            <h3 class="adventures-title">Еда</h3>
-            <p class="adventures-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="adventures-item">
-            <img class="village" src="images/gift.svg" width="65" height="76" alt="подарок">
-            <h3 class="adventures-title">Сувениры</h3>
-            <p class="adventures-description">Не только китайского, но и настоящего местного производства!</p>
-          </li>
-        </ul>
-      </section>
-      <section class="interested">
-        <h2 class="interested-title">Заинтересовались?</h2>
-        <p class="interested-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
-          гостиниц в Седоне</p>
-        <a class="button-button-hotel" href="#">поиск гостиницы в седоне</a>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <section class="footer-newsletter">
-        <h2 class="footer-newsletter-title">Подпишитесь на рассылку</h2>
-        <p class="footer-newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="mail-address" action="https://echo.htmlacademy.ru/" method="post"></form>
-        <img class="canyon" src="images/canyon.jpg" width="700" height="350" alt="Каньон-приближен-размыт">
-        <p>
-          <label for="appointment-date"></label>
-          <input type="text" id="appointment-date" name="appointment-date" placeholder="Ваш e-mail">
-          <button class="button" type="submit">подписаться</button>
-        </p>
-      </section>
-      <section class=footer-contacts>
-        <h2 class="contacts"><span class="visually-hidden">Контакты</span></h2>
-        <h3 class="visually-hidden">Соцсети</h3>
-        <ul class="footer-social-list">
-          <li class="social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">ВКонтакте</span>
+    <div class="page-container">
+      <header class="page-header">
+        <a class="logo-link" href="#">
+          <img class="logo" src="images/logo.svg" width="140" height="70" alt="логотип Седона">
+        </a>
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="home.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="about.html">О Седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="hotels.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-user-list">
+            <li class="navigation-user">
+              <a class="navigation-user-link" href="#">
+                <span class="visually-hidden">Поиск</span>
+                <img class="navigation-search" src="images/search.svg" width="19" height="19" alt="иконка поиск">
+              </a>
+            </li>
+            <li class="navigation-user">
+              <a class="navigation-user-link" href="#">
+                <span class="visually-hidden">Избранное</span>
+                <img class="navigation-search" src="images/like.svg" width="18" height="17" alt="иконка избранное">
+              </a>
+            </li>
+            <li class="navigation-user">
+              <a class="navigation-link-button navigation-user-link" href="#">Хочу сюда</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main class="main-index">
+        <h1 class="visually-hidden">Отели в городе Седона</h1>
+        <section class="welcome">
+          <h2 class="visually-hidden">Неофциальный</h2>
+          <img class="welcome-img" src="images/welcome.svg" width="458" height="352" alt="добро пожаловать">
+        </section>
+        <section class="adventures">
+          <h2 class="adventures-caption">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <p class="adventures-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <ul class="adventures-list">
+            <li class="adventures-item-first">
+              <h3 class="adventures-title">Настоящий городок</h3>
+              <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
+              <p class="adventures-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img class="village" src="images/сity.jpg" width="700" height="350" alt="Фото города">
+            </li>
+            <li class="adventures-item-second">
+              <h3 class="adventures-title">Небольшая площадь</h3>
+              <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
+              <p class="adventures-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="adventures-item-third">
+              <h3 class="adventures-title">Красивая дорога</h3>
+              <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
+              <p class="adventures-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="adventures-item-fourth">
+              <h3 class="adventures-title">Мало туристов</h3>
+              <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
+              <p class="adventures-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+            <li class="adventures-item-fifth">
+              <h3 class="adventures-title">Там есть мост дьявола</h3>
+              <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
+              <p class="adventures-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <img class="canyon" src="images/canyon.jpg" width="700" height="350" alt="Каньон">
+            </li>
+          </ul>
+          <ul>
+            <li class="adventures-item-sixth">
+              <img class="village-image.png" src="images/home.svg" width="76" height="72" alt="Дом">
+              <h3 class="adventures-title">Жильё</h3>
+              <p class="adventures-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="adventures-item-seventh">
+              <img class="village-image.png" src="images/burger.svg" width="75" height="70" alt="Бургер">
+              <h3 class="adventures-title">Еда</h3>
+              <p class="adventures-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="adventures-item-eighth">
+              <img class="village-image" src="images/gift.svg" width="65" height="76" alt="подарок">
+              <h3 class="adventures-title">Сувениры</h3>
+              <p class="adventures-description">Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+        <section class="interested">
+          <h2 class="interested-title">Заинтересовались?</h2>
+          <p class="interested-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
+            гостиниц в Седоне</p>
+          <a class="button-button-hotel" href="#">поиск гостиницы в седоне</a>
+        </section>
+      </main>
+      <footer class="page-footer">
+        <section class="footer-newsletter">
+          <h2 class="footer-newsletter-title">Подпишитесь на рассылку</h2>
+          <p class="footer-newsletter-description">Только полезная информация и никакого спама, честное бойскаутское!
+          </p>
+          <form class="mail-address" action="https://echo.htmlacademy.ru/" method="post"></form>
+          <p class="appointment-form">
+            <label for="appointment-date"></label>
+            <input class="appointment-date-mail" type="text" id="appointment-date" name="appointment-date" placeholder="Ваш e-mail">
+            <button class="button-subscription" type="submit">подписаться</button>
+          </p>
+        </section>
+        <section class=footer-contacts>
+          <h2 class="contacts"><span class="visually-hidden">Контакты</span></h2>
+          <h3 class="visually-hidden">Соцсети</h3>
+          <ul class="footer-social-list">
+            <li class="social-item">
+              <a class="button" href="#">
+                <span class="visually-hidden">ВКонтакте</span>
                 <a href="#">
                   <img class="vk" src="images/VK.svg" width="25" height="15" alt="иконка-вк">
                 </a>
-            </a>
-          </li>
-          <li class="social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">телеграмм
-              </span>
-              <a href="#">
-                <img class="tg" src="images/telegram.svg" width="18" height="16" alt="иконка-телеграмм">
               </a>
-          </li>
-          <li class="social-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">youTube
-              </span>
-              <a href="#">
-                <img class="yt" src="images/youtube.svg" width="23" height="18" alt="иконка-ютуб">
+            </li>
+            <li class="social-item">
+              <a class="button" href="#">
+                <span class="visually-hidden">телеграмм
+                </span>
+                <a href="#">
+                  <img class="tg" src="images/telegram.svg" width="18" height="16" alt="иконка-телеграмм">
+                </a>
+            </li>
+            <li class="social-item">
+              <a class="button" href="#">
+                <span class="visually-hidden">youTube
+                </span>
+                <a href="#">
+                  <img class="yt" src="images/youtube.svg" width="23" height="18" alt="иконка-ютуб">
+                </a>
               </a>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <section class="footer-phone">
-        <h3 class="footer-phone-title"> <span class="visually-hidden">Телефон</span> </h3>
-        <a class="footer-phone-number" href="tel:78128121212">+7 (812) 812-12-12</a>
-      </section>
-      <section class="footer-logo">
-        <h3 class="footer-logo"><span class="visually-hidden">Логотип в подвале</span></h3>
-        <a href="#">
-          <img class="footer-Logo-icon" src="images/htmlacademy.svg" width="115" height="34" alt="Логотип в footer">
-        </a>
-      </section>
-    </footer>
-
+            </li>
+          </ul>
+        </section>
+        <section class="footer-phone">
+          <h3 class="footer-phone-title"> <span class="visually-hidden">Телефон</span> </h3>
+          <a class="footer-phone-number" href="tel:78128121212">+7 (812) 812-12-12</a>
+        </section>
+        <section class="footer-logo">
+          <h3 class="footer-logo"><span class="visually-hidden">Логотип в подвале</span></h3>
+          <a href="#">
+            <img class="footer-Logo-icon" src="images/htmlacademy.svg" width="115" height="34" alt="Логотип в footer">
+          </a>
+        </section>
+      </footer>
+    </div>
   </body>
 
 </html>
