Применил Sticky footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </ul>
         </nav>
       </header>
-      <main class="main-index">
+      <main class="main-container main-index">
         <h1 class="visually-hidden">Отели в городе Седона</h1>
         <section class="welcome">
           <h2 class="visually-hidden">Неофциальный</h2>
@@ -54,28 +54,28 @@
           <h2 class="adventures-caption">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="adventures-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="adventures-list">
-            <li class="adventures-item-first">
+            <li class="advantures-item advantures-item—hotel">
               <h3 class="adventures-title">Настоящий городок</h3>
               <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
               <p class="adventures-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               <img class="village" src="images/сity.jpg" width="700" height="350" alt="Фото города">
             </li>
-            <li class="adventures-item-second">
+            <li class="adventures-item advantures-item—square">
               <h3 class="adventures-title">Небольшая площадь</h3>
               <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
               <p class="adventures-description">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="adventures-item-third">
+            <li class="adventures-item advantures-item—road">
               <h3 class="adventures-title">Красивая дорога</h3>
               <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
               <p class="adventures-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="adventures-item-fourth">
+            <li class="adventures-item advantures-item—tourists">
               <h3 class="adventures-title">Мало туристов</h3>
               <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
               <p class="adventures-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-            <li class="adventures-item-fifth">
+            <li class="adventures-item advantures-item—bridge">
               <h3 class="adventures-title">Там есть мост дьявола</h3>
               <img class="village-trait" src="images/trait.svg" width="60" height="2" alt="Черта">
               <p class="adventures-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -83,17 +83,17 @@
             </li>
           </ul>
           <ul>
-            <li class="adventures-item-sixth">
+            <li class="adventures-item advantures-item—house">
               <img class="village-image.png" src="images/home.svg" width="76" height="72" alt="Дом">
               <h3 class="adventures-title">Жильё</h3>
               <p class="adventures-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="adventures-item-seventh">
+            <li class="adventures-item advantures-item—food">
               <img class="village-image.png" src="images/burger.svg" width="75" height="70" alt="Бургер">
               <h3 class="adventures-title">Еда</h3>
               <p class="adventures-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="adventures-item-eighth">
+            <li class="adventures-item advantures-item—souvenirs">
               <img class="village-image" src="images/gift.svg" width="65" height="76" alt="подарок">
               <h3 class="adventures-title">Сувениры</h3>
               <p class="adventures-description">Не только китайского, но и настоящего местного производства!</p>
