--- a/index.html
+++ b/index.html
@@ -29,17 +29,23 @@
             <li class="navigation-user-list">
               <a class="navigation-user-link" href="#">
                 <span class="visually-hidden">Поиск</span>
-                <img class="navigation-search" src="images/search.svg" width="19" height="19" alt="иконка поиск">
+                <div class="navigation-search">
+                  <img class="navigation-search-img" src="images/search.svg" width="19" height="19" alt="иконка поиск">
+                </div>
               </a>
             </li>
-            <li class="navigation-user">
+            <li class="navigation-user-list">
               <a class="navigation-user-link" href="#">
                 <span class="visually-hidden">Избранное</span>
-                <img class="navigation-search" src="images/like.svg" width="18" height="17" alt="иконка избранное">
+                <div class="navigation-search">
+                  <img class="navigation-like-img" src="images/like.svg" width="18" height="17" alt="иконка избранное">
+                </div>
               </a>
             </li>
-            <li class="navigation-user">
-              <a class="navigation-link-button navigation-user-link" href="#">Хочу сюда</a>
+            <li class="navigation-user-list">
+              <div class="navigation-user-button">
+                <a class="navigation-link-button navigation-user-link" href="#">Хочу сюда</a>
+              </div>
             </li>
           </ul>
         </nav>
