--- a/index.html
+++ b/index.html
@@ -154,9 +154,7 @@
               <li class="social-item">
                 <a class="button" href="#">
                   <span class="visually-hidden">ВКонтакте</span>
-                  <a href="#">
-                    <img class="vk" src="images/VK.svg" width="25" height="15" alt="иконка-вк">
-                  </a>
+                  <svg width="25" height="15" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" fill="#83B3D3"/></svg>
                 </a>
               </li>
               <li class="social-item">
@@ -164,7 +162,7 @@
                   <span class="visually-hidden">телеграмм
                   </span>
                   <a href="#">
-                    <img class="tg" src="images/telegram.svg" width="18" height="16" alt="иконка-телеграмм">
+                    <svg width="18" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" fill="#83B3D3"/></svg>
                   </a>
               </li>
               <li class="social-item">
@@ -172,7 +170,7 @@
                   <span class="visually-hidden">youTube
                   </span>
                   <a href="#">
-                    <img class="yt" src="images/youtube.svg" width="23" height="18" alt="иконка-ютуб">
+                    <svg width="23" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19 .4H3.4C1.6.4.3 2 .3 3.8v10c0 2 1.3 3.6 3.2 3.6h15.7c1.6 0 3.1-1.6 3.1-3.4V3.8C22.1 2 20.8.4 19 .4ZM8 12.9v-8l7.3 4-7.3 4Z" fill="#83B3D3"/></svg>
                   </a>
                 </a>
               </li>
