--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 
   <head>
+    <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-
   <body>
     <div class="page-container">
       <header class="page-header">
@@ -271,11 +271,10 @@
               </div>
             </div>
             <div class="field-group people-number popover-info">
-              <label class="title-modal-form child-info" for="child-modal-form">Дети:
+              <label class="title-modal-form child-info" for="child-modal-form">Дети:</label>
                 <div class="popover-container">
-                  <a href="#" class="popover-information-link">
+                  <a href="#" class="popover-information-link"></a>
                     <span class="visually-hidden">Показать дополнительную информацию</span>
-                  </a>
                   <div class="popover">
                     <p class="popover-content">
                       Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет
@@ -283,7 +282,6 @@
                     </p>
                   </div>
                 </div>
-              </label>
               <div class="wrapper-number-input">
                 <input class="modal-form-field people-number-input" type="number" id="child-modal-form"
                   name="child-number" placeholder="2">
@@ -316,5 +314,4 @@
     </div>
     <script src="./scripts/script.js"></script>
   </body>
-
 </html>
